--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,3 +1,10 @@
-app.title= Spring Boot Sample 
+app.title= Spring Boot Sample
 app.footer = Created with love in Coders Lab
 hello.message= Witam {0}
+quantity.min=Musi być liczbą większą niż 1
+not_blank=Pole nie może być puste
+zpiCode.pattern=Np. 00-000
+radiobutton.notNull=Musisz wybrać co najmniej jedną opcję
+date.future=Nie możesz podać przeszłej daty
+phone.reg=Numer telefonu powinien składać się z dziewięciu cyfr
+email.correctness=Niepoprawny email
