--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -6,5 +6,6 @@ not_blank=Pole nie może być puste
 zpiCode.pattern=Np. 00-000
 radiobutton.notNull=Musisz wybrać co najmniej jedną opcję
 date.future=Nie możesz podać przeszłej daty
+time.notNull=Musisz podać czas odbioru
 phone.reg=Numer telefonu powinien składać się z dziewięciu cyfr
 email.correctness=Niepoprawny email
