--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -9,3 +9,4 @@ date.future=Nie możesz podać przeszłej daty
 time.notNull=Musisz podać czas odbioru
 phone.reg=Numer telefonu powinien składać się z dziewięciu cyfr
 email.correctness=Niepoprawny email
+email.not_blank=Pole email nie może być puste
